--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
          id="product"
          point="org.eclipse.core.runtime.products">
       <product
-            name="%product.name"
+            name="Open Poker Tournament Manager"
             application="org.eclipse.e4.ui.workbench.swt.E4Application">
          <property
                name="clearPersistedState"
