--- a/build.properties
+++ b/build.properties
@@ -5,5 +5,6 @@ bin.includes = META-INF/,\
                Application.e4xmi,\
                css/default.css,\
                OSGI-INF/l10n/bundle.properties,\
-               OSGI-INF/
+               OSGI-INF/,\
+               icons/
 source.. = src/
