added SelectionListener to RepositoryView and inject selection in OpenBettings handler

--- a/BettingSchedule/plugin.xml
+++ b/BettingSchedule/plugin.xml
@@ -14,5 +14,8 @@
             uri="fragment.e4xmi">
       </fragment>
    </extension>
+   <extension
+         point="org.eclipse.core.expressions.definitions">
+   </extension>
 
 </plugin>
