prepared service for managing th repository.

--- a/optm/build.properties
+++ b/optm/build.properties
@@ -6,5 +6,7 @@ bin.includes = META-INF/,\
                css/default.css,\
                OSGI-INF/l10n/bundle.properties,\
                OSGI-INF/,\
-               icons/
+               icons/,\
+               OSGI-INF/component.xml,\
+               OSGI-INF/component.xml
 source.. = src/
