--- a/BettingSchedule/.project
+++ b/BettingSchedule/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BettingSchedule</name>
+	<name>optm.bettingschedule</name>
 	<comment></comment>
 	<projects>
 	</projects>
