--- a/optm.repository.service/build.properties
+++ b/optm.repository.service/build.properties
@@ -1,5 +1,7 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/component.xml
+               OSGI-INF/component.xml,\
+               service.xml,\
+               OSGI-INF/service.xml
 source.. = src/
