removed unused reference to component.xml

--- a/optm/build.properties
+++ b/optm/build.properties
@@ -6,7 +6,5 @@ bin.includes = META-INF/,\
                css/default.css,\
                OSGI-INF/l10n/bundle.properties,\
                OSGI-INF/,\
-               icons/,\
-               OSGI-INF/component.xml,\
-               OSGI-INF/component.xml
+               icons/
 source.. = src/
