Using core expression for menu item 'open'. Showing menu item only when a BettingSchedule is selected.

--- a/optm.bettingschedule/plugin.xml
+++ b/optm.bettingschedule/plugin.xml
@@ -10,6 +10,15 @@
    </extension>
    <extension
          point="org.eclipse.core.expressions.definitions">
+      <definition
+            id="optm.bettingschedule.definition1">
+         <with
+               variable="org.eclipse.ui.selection">
+            <instanceof
+                  value="optm.bettingschedule.model.BettingSchedule">
+            </instanceof>
+         </with>
+      </definition>
    </extension>
 
 </plugin>
